@@ -1,3 +1,7 @@
+Thu Oct 18 01:15:25 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c: PIPE_BUF is no longer used, so don't define it.
+
 Wed Oct 17 22:34:32 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* gnulib/lib/minmax.h, gnulib/m4/minmax.m4: Import the Gnulib minmax
